# adabmDCApy

./: .buildinfo  .gitignore  404.html  LICENSE  MANIFEST.in  README.md  adabmDCA.sh  adabmDCApy.html  applications.html  bibliography.html  boltzmann_learning.html  genindex.html  implementation.html  index.html  installation.html  mkdocs.yml  objects.inv  preprocessing.html  py-modindex.html  pyproject.toml  quicklist.html  requirements.txt  script_arguments.html  search.html  searchindex.js  setup.py  test.ipynb
_sources/: adabmDCApy.md.txt  applications.md.txt  bibliography.md.txt  boltzmann_learning.md.txt  implementation.md.txt  installation.md.txt  preprocessing.md.txt  quicklist.md.txt  script_arguments.md.txt
adabmDCA/: __init__.py  adabmDCA.sh  checkpoint.py  cli.py  cobalt.py  custom_fn.py  dataset.py  dca.py  fasta.py  fasta_utils.py  functional.py  grad.py  graph.py  io.py  methods.py  parser.py  pca.py  plot.py  resampling.py  sampling.py  statmech.py  stats.py  training.py  utils.py
api/: index.html
applications/: index.html
doc/: adabmDCA.rst  adabmDCApy.md  applications.md  bibliography.bib  boltzmann_learning.md  conf.py  conf.yaml  implementation.md  index.md  index.rst  installation.md  modules.rst  preprocessing.md  prova.md  quicklist.md
docs/: installation.md  preprocessing.md  quicklist.md  training.md
documentation/: mkdocs.yml
example_data/: CM_130530_MC.fasta  RF00379.fasta  RF00379_cut.fasta
installation/: index.html
notebooks/: tests.ipynb
preprocessing/: index.html
quicklist/: index.html
script_arguments/: index.html
(+184 files in other folders)
