[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adabmDCA"
version = "0.0.1"
authors = [
  { name="Lorenzo Rosset", email="rosset.lorenzo@gmail.com"},
  { name="Roberto Netti"},
  { name="Anna Paola Muntoni"},
  { name="Francesco Zamponi"},
  { name="Martin Weigt"},
]
description = "Python implementation of Direct Coupling Analysis"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/spqb/adabmDCA"
Issues = "https://github.com/spqb/adabmDCA/issues"